--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ python-dotenv==1.0.1
 psycopg2==2.9.9
 schedule==1.2.2
 sqlalchemy==2.0.31
-dotenv-python == 0.0.1
+python-dotenv==1.0.1
 fastapi==0.111.0
 uvicorn==0.30.1
 setuptools==70.3.0
