--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,39 @@ services:
     networks:
       - mynetwork
 
+  scrapy:
+    build:
+      context: ./src/quotescrapper  # Ruta al directorio del proyecto de Scrapy
+      dockerfile: Dockerfile  # Ruta al Dockerfile dentro del contexto ./scrapy_project
+    container_name: scrapy-container
+    restart: on-failure
+    env_file:
+      - .env  # Si el proyecto de Scrapy necesita variables de entorno
+    depends_on:
+      - postgres
+    networks:
+      - mynetwork
+
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile  # Ruta al Dockerfile dentro del contexto ./src
+    container_name: fastapi-app
+    restart: always
+    env_file:
+      - .env  # Ruta al archivo .env relativa al directorio donde se encuentra el docker-compose.yml
+    ports:
+      - "8000:8000"
+    depends_on:
+      - scrapy
+      - postgres
+    volumes:
+      - ./logs:/app/logs
+    networks:
+      - mynetwork
+
+
+
 networks:
   mynetwork:
     driver: bridge
