--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,18 @@ services:
     networks:
       - mynetwork
 
-
+  streamlit:
+    build:
+      context: ./streamlit
+      dockerfile: Dockerfile
+    container_name: streamlit-app
+    restart: always
+    ports:
+      - "8501:8501"
+    depends_on:
+     - api
+    networks:
+      - mynetwork
 
 networks:
   mynetwork:
