--- a/streamlit/requirements.txt
+++ b/streamlit/requirements.txt
@@ -1,4 +1,4 @@
-scrapy==2.11.2
+Scrapy==2.11.2
 python-dotenv==1.0.1
 psycopg2-binary==2.9.9
 schedule==1.2.2
@@ -12,3 +12,5 @@ requests==2.32.3
 numpy==2.0.0
 pandas==2.2.2
 streamlit==1.36.0
+deep_translator==1.11.4
+seaborn==0.13.2
